test_fm/_test57.ref
Error: right operand of comparison must be a Character in '_test57.nj' on line 10
