test_fm/_test57.nj
//
// right operand not character
//


public class Main extends Object {

  public static void main() {
    local Boolean x;
    x = 'a' <= 50;
  }

}
